[package]
name = "sunnyday"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sunnyday"
path = "src/console/bin/main.rs"

[[bin]]
name = "sunnydayd"
path = "src/web/bin/main.rs"

[dependencies]
once_cell = "1.7"
askama = "0.11"
axum = "0.6"
base64 = "0.21"
tokio = { version = "1.27", features = ["full"] }
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
image = "0.24"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.4"